--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,99 @@ body {
     color:rgb(240, 227, 215) !important;
     background-color: rgba(50, 45, 41) !important;
 }
+
+form input,
+form textarea {
+    padding: 0.5rem;
+    background-color: rgb(111 102 96) !important;
+    border-radius: 4px;
+    border-style: none;
+    color: inherit;
+}
+
+form input:disabled,
+form textarea:disabled {
+    outline-style: none;
+    background-color: transparent !important;
+    color: inherit !important;
+    border: none;
+}
+
+form input:focus-visible,
+form textarea:focus-visible,
+form ng-select:focus-visible {
+    outline-style: none;
+}
+
+/* Chrome, Firefox, Opera, Safari 10.1+ */
+form input::placeholder,
+form textarea::placeholder {
+    color: inherit !important;
+    opacity: 1; /* Firefox */
+}
+
+/* Internet Explorer 10-11 */
+form input:-ms-input-placeholder form textarea:-ms-input-placeholder {
+    color: inherit !important;
+}
+
+/* Microsoft Edge */
+form input::-ms-input-placeholder form textarea::-ms-input-placeholder {
+    color: inherit !important;
+}
+
+form ng-select .ng-select-container,
+form ng-select .ng-select-container .ng-value-container,
+form ng-select .ng-select-container .ng-value-container .ng-placeholder,
+form ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
+    background-color: rgb(111 102 96) !important;
+    border: none !important;
+    color: inherit !important;
+}
+
+form ng-select .ng-select-container {
+    overflow: visible !important;
+}
+
+form ng-select .ng-select-container .ng-value-container .ng-input,
+form ng-select .ng-select-container .ng-value-container .ng-input input {
+    background-color: transparent !important;
+    border: none !important;
+    color: inherit !important;
+}
+
+form ng-select .ng-select-container .ng-value-container .ng-input input {
+    padding: 0 !important;
+}
+
+form ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked {
+    background-color: rgb(75, 68, 64) !important;
+}
+
+form ng-select .ng-select-container .ng-value-container .ng-value,
+form ng-select .ng-select-container .ng-value-container .ng-value .ng-value-label {
+    color: inherit !important;
+}
+
+form ng-select .ng-select-container .ng-clear-wrapper {
+    color: inherit !important;
+}
+
+.ng-select .ng-clear-wrapper:hover .ng-clear {
+    color: rgb(249 128 47) !important;
+}
+
+form ng-select .ng-select-container .ng-arrow-wrapper .ng-arrow {
+    border-color: rgb(240, 227, 215) transparent transparent !important;
+}
+
+.primary-button {
+    min-width: max-content;
+    padding: 0.4rem 1.2rem;
+    text-align: center;
+    grid-column-end: -1;
+    justify-self: end;
+    background-color: rgb(249 128 47) !important;
+    border-style: none;
+    color: inherit !important;
+}
