--- a/src/app/teacher-menu/teacher-menu.component.css
+++ b/src/app/teacher-menu/teacher-menu.component.css
@@ -2,10 +2,33 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 30vh 70vh;
+    grid-gap: 1rem;
     padding: 4rem 5rem;
 }
 
-.teacher-menu-grid .leaderbaord {
+.teacher-menu-grid-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.teacher-menu-grid-section-title {
+    font-size: 1.4rem;
+    font-weight: bolder;
+    background-color: rgb(111 102 96);
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    width: 100%;
+    display: inline-block;
+    padding: 0.25rem 0.75rem
+}
+
+.teacher-menu-grid-section-content {
+    border: solid 1px rgb(111 102 96);
+    padding: 10px;
+}
+
+.leaderboard {
     grid-column-start: 1;
     grid-column-end: 2;
 }
@@ -18,7 +41,6 @@
 .teacher-menu-nav ul {
     list-style: none;
     margin: 0;
-    padding: 0;
 }
 
 .teacher-menu-nav li {
@@ -38,9 +60,4 @@
     grid-column-end: -1;
     grid-row-start: 1;
     grid-row-end: -1;
-}
-
-.menu-title {
-    font-size: 1.4rem;
-    font-weight: bolder;
 }
