--- a/src/app/member-management/member-management-portal/member-management-portal.component.html
+++ b/src/app/member-management/member-management-portal/member-management-portal.component.html
@@ -1,93 +1,97 @@
-<div class="card">
-    <div class="house-member-count-flex">
-        <div>
-            <span>Arctic</span>
-            <span class="member-count">31 members</span>
-        </div>
-        <div>
-            <span>Grey</span>
-            <span class="member-count">28 members</span>
-        </div>
-        <div>
-            <span>Timber</span>
-            <span class="member-count">29 members</span>
-        </div>
+<div class="house-member-count-flex">
+    <div>
+        <span>Arctic</span>
+        <span class="member-count">31 members</span>
     </div>
     <div>
-        <form [formGroup]="addMemberForm" class="info-form">
-            <div class="info-input-flex">
-                <label for="memberDropdown" class="info-form-label">Member</label>
-                <ng-select 
-                    [items]="members"
-                    placeholder="Select a member"
-                    labelForId="memberDropdown"
-                    formControlName="selectedMember"
-                    class="dropdown">
-                </ng-select>
-            </div>
-            <div class="info-row-flex">
-                <div class="info-input-flex" *ngIf="addMemberForm.get('firstName')">
-                    <label for="firstName" class="info-form-label">First Name</label>
-                    <input
-                    id="firstName" 
-                    type="text" 
-                    formControlName="firstName"
-                    class="form-control info-form-input"/> 
-                </div>
-            
-                <div class="info-input-flex" *ngIf="addMemberForm.get('lastInitial')">
-                    <label for="lastInitial" class="info-form-label">Last Initial</label>
-                    <input  
-                    id="lastInitial" 
-                    type="text" 
-                    formControlName="lastInitial"
-                    class="form-control info-form-input"/> 
-                </div>
-                
-                <div class="info-input-flex" *ngIf="addMemberForm.get('house')">
-                    <label for="house" class="info-form-label">House</label>
-                    <ng-select 
-                        [items]="houseNames"
-                        placeholder="Select a house"
-                        labelForId="house"
-                        formControlName="house"
-                        class="dropdown">
-                    </ng-select>
-                </div>
-                <div class="info-input-flex" *ngIf="addMemberForm.get('memberType')">            
-                    <div class="member-radio-row-grid" >
-                        <div>
-                            <label for="student">Student</label>
-                            <input type="radio" id="student" formControlName="memberType" value="student" class="m-2">
-                        </div>
-                        <div>
-                            <label for="staff">Staff</label>
-                            <input type="radio" id="staff" formControlName="memberType" value="staff" class="m-2">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        
-            <button 
-                type="submit"
-                class="btn btn-primary"
-                *ngIf="addMemberForm.get('selectedMember')?.value == null">
-                Add New Member</button>
-            <button 
-                type="submit" 
-                class="btn btn-primary edit-button" 
-                *ngIf="addMemberForm.get('selectedMember')?.value != null"
-                (click)="editMember">
-                Edit Member</button>
-            <button 
-                type="submit" 
-                class="btn btn-danger remove-button" 
-                *ngIf="addMemberForm.get('selectedMember')?.value != null">
-                Remove Member</button>
-        </form>
+        <span>Grey</span>
+        <span class="member-count">28 members</span>
+    </div>
+    <div>
+        <span>Timber</span>
+        <span class="member-count">29 members</span>
     </div>
 </div>
 
-<!-- <app-add-member></app-add-member>
-<app-edit-member></app-edit-member>
-<app-remove-member></app-remove-member> -->
+<form [formGroup]="addMemberForm" class="info-form">
+    <div class="info-input-flex">
+        <label for="memberDropdown" class="info-form-label">Member</label>
+        <ng-select 
+            [items]="members"
+            placeholder="Select a member"
+            labelForId="memberDropdown"
+            formControlName="selectedMember"
+            class="dropdown">
+        </ng-select>
+        <button *ngIf="addMemberForm.get('selectedMember')?.value == null"
+            type="submit"
+            class="btn primary-button add-button">
+            Add New Member
+        </button>
+    </div>
+
+    <div *ngIf="addMemberForm.get('memberType')" class="info-row-flex">
+        <div class="info-input-flex" *ngIf="addMemberForm.get('firstName')">
+            <label for="firstName" class="info-form-label">First Name</label>
+            <input
+            id="firstName" 
+            type="text" 
+            formControlName="firstName"
+            class="info-form-input"/> 
+        </div>
+    
+        <div class="info-input-flex" *ngIf="addMemberForm.get('lastInitial')">
+            <label for="lastInitial" class="info-form-label">Last Initial</label>
+            <input  
+            id="lastInitial" 
+            type="text" 
+            formControlName="lastInitial"
+            class="info-form-input"/> 
+        </div>
+        
+        <div class="info-input-flex" *ngIf="addMemberForm.get('house')">
+            <label for="house" class="info-form-label">House</label>
+            <input  
+                id="house" 
+                type="text"
+                formControlName="house"
+                class="info-form-input"/> 
+            <!--  <ng-select 
+                [items]="houseNames"
+                placeholder="Select a house"
+                labelForId="house"
+                formControlName="house"
+                class="dropdown">
+            </ng-select> -->
+        </div>
+
+        <div class="info-input-flex" *ngIf="addMemberForm.get('memberType')">            
+            <div class="member-radio-row-grid" >
+                <div>
+                    <label for="student">Student</label>
+                    <input type="radio" id="student" formControlName="memberType" value="student" class="m-2">
+                </div>
+                <div>
+                    <label for="staff">Staff</label>
+                    <input type="radio" id="staff" formControlName="memberType" value="staff" class="m-2">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div *ngIf="addMemberForm.get('memberType')" class="button-row-flex">
+        <button 
+            type="submit" 
+            class="btn primary-button edit-button" 
+            *ngIf="addMemberForm.get('selectedMember')?.value != null"
+            (click)="editMember()">
+            Edit Member
+        </button>
+        <button 
+            type="submit" 
+            class="btn primary-button remove-button" 
+            *ngIf="addMemberForm.get('selectedMember')?.value != null">
+            Remove Member
+        </button>
+    </div>
+</form>
