--- a/src/app/student-points/student-points-details/student-points-details.component.html
+++ b/src/app/student-points/student-points-details/student-points-details.component.html
@@ -1,36 +1,40 @@
-<div class="card m-3">
-    <div class="card-body">
-        <div class="student-info-header">
-            <img class="wolf-house-symbol" src="../../assets/images/arctic-wolf.jpg">
-            <div>
-                <span class="student-info-header-name">{{ student.name }}</span>
-                <div class="student-info-header-points">
-                    <span>{{ totalPoints }}</span><span>points</span>
-                </div>
-            </div>
+<div class="student-info-header">
+    <img class="wolf-house-symbol" src="../../assets/images/arctic-wolf.jpg">
+    <span class="student-info-header-name">{{ student.name }}</span>
+    <div class="student-info-header-details">
+        <div class="student-info-header-details-flex-column">
+            <span>{{ totalPoints }}</span>
+            <span>points</span>
         </div>
-
-        <div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Points</th>
-                        <th>Paw</th>
-                        <th>Comments</th>
-                        <th>Staff</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let submission of pointsSubmissions">
-                        <td>{{ submission.date }} </td>
-                        <td>{{ submission.points }} </td>
-                        <td>{{ submission.paw }}</td>
-                        <td>{{ submission.comments }}</td>
-                        <td>{{ submission.staff }}</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="student-info-header-details-flex-column">
+            <span>5</span>
+            <span>grade</span>
+        </div>
+        <div class="student-info-header-details-flex-column">
+            <span>Tiffany</span>
+            <span>teacher</span>
         </div>
     </div>
 </div>
+  
+<table class="student-card table">
+    <thead>
+        <tr>
+            <th>Date</th>
+            <th>Points</th>
+            <th>Paw</th>
+            <th>Comments</th>
+            <th>Staff</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let submission of pointsSubmissions">
+            <td>{{ submission.date }} </td>
+            <td>{{ submission.points }} </td>
+            <td>{{ submission.paw }}</td>
+            <td>{{ submission.comments }}</td>
+            <td>{{ submission.staff }}</td>
+        </tr>
+    </tbody>
+</table>
+ 
