--- a/src/app/teacher-menu/teacher-menu.component.css
+++ b/src/app/teacher-menu/teacher-menu.component.css
@@ -25,7 +25,7 @@
 
 .teacher-menu-grid-section-content {
     border: solid 1px rgb(111 102 96);
-    padding: 10px;
+    padding: 1rem;
 }
 
 .leaderboard {
