--- a/src/app/student-points/student-points-details/student-points-details.component.css
+++ b/src/app/student-points/student-points-details/student-points-details.component.css
@@ -57,6 +57,8 @@
 
 .student-card thead tr th {
     border-bottom: none;
+    font-weight: lighter;
+    letter-spacing: 1px;
 }
 
 .student-card thead tr th:first-child {
