--- a/src/app/student-points/students-points-list/student-points-list.component.css
+++ b/src/app/student-points/students-points-list/student-points-list.component.css
@@ -14,6 +14,8 @@ h2 {
 
 .student-list thead tr th {
     border-bottom: none;
+    font-weight: lighter;
+    letter-spacing: 1px;
 }
 
 .student-list thead tr th:first-child {
