--- a/src/app/leaderboard/leaderboard.component.css
+++ b/src/app/leaderboard/leaderboard.component.css
@@ -14,7 +14,8 @@
     align-items: center;
     margin: 0;
     transition: .3s;
-    box-shadow: inset 1rem 1rem 20rem 20rem rgba(50, 45, 41, 0.3);
+    box-shadow: inset 1rem 1rem 20rem 20rem rgba(50, 45, 41, 0.5);
+    line-height: 1.1;
 }
 
 .arctic {
@@ -40,7 +41,7 @@
 .arctic:hover,
 .grey:hover,
 .timber:hover {
-    box-shadow: inset 1rem 1rem 20rem 20rem rgba(50, 45, 41, 0.6);
+    box-shadow: inset 1rem 1rem 20rem 20rem rgba(50, 45, 41, 0.7);
 }
 
 
@@ -55,7 +56,8 @@
 }
 
 .wolf-house-name {
-    font-size: 2.2vw; 
+    font-family: 'Caveat', cursive;
+    font-size: 3vw; 
 }
 
 .wolf-house-points {
@@ -69,14 +71,13 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    padding: 0.5rem;
 }
     
 .wolf-house-flex-tiny {
     display: grid;
     grid-template-columns: 65px 120px 1fr;
     grid-template-rows: auto auto auto;
-    margin: 0.25rem 0;
+    margin: 0.5rem 0;
     width: 100%;
     padding-right: 1rem;
 }
@@ -93,8 +94,8 @@
 }
 
 .wolf-house-symbol-tiny {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     object-fit: cover;
 }
