--- a/src/app/points/points.component.css
+++ b/src/app/points/points.component.css
@@ -3,8 +3,6 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    padding: 0rem;
-    margin: 1rem 0 0 0;
     max-width: max-content;
 }
 
@@ -20,10 +18,6 @@
     margin: 0.25rem;
 }
 
-form button {
-    min-width: max-content;
-    padding: 0.5rem 1rem;
-    min-width: 140px;
-    text-align: center;
-    align-self: end;
+.add-points-btn {
+    align-self: flex-end;
 }
