--- a/src/app/points/points.component.html
+++ b/src/app/points/points.component.html
@@ -59,5 +59,5 @@
       formControlName="teacher"/> 
   </div>
   
-  <button type="submit" class="btn primary-button">Add Points</button>
+  <button type="submit" class="btn primary-button add-points-btn">Add Points</button>
 </form>
