--- a/src/app/teacher-menu/teacher-menu.component.css
+++ b/src/app/teacher-menu/teacher-menu.component.css
@@ -1,7 +1,7 @@
 .teacher-menu-grid {
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 30vh 70vh;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: auto 1fr;
     grid-gap: 1rem;
     padding: 4rem 5rem;
 }
@@ -14,7 +14,7 @@
 
 .teacher-menu-grid-section-title {
     font-size: 1.4rem;
-    font-weight: bolder;
+    font-weight: lighter;
     background-color: rgb(111 102 96);
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
