--- a/src/app/leaderboard/leaderboard.component.css
+++ b/src/app/leaderboard/leaderboard.component.css
@@ -52,11 +52,12 @@
     margin: 0.25rem;
     width: 100%;
     color: #FFF;
-    text-shadow: 0 0 10px rgb(50 45 41)
+    text-shadow: 0 0 10px rgb(50 45 41);
 }
 
 .wolf-house-name {
     font-family: 'Caveat', cursive;
+    letter-spacing: 1.5px;
     font-size: 3vw; 
 }
 
