--- a/src/app/staff-points/staff-points-details/staff-points-details.component.html
+++ b/src/app/staff-points/staff-points-details/staff-points-details.component.html
@@ -1,39 +1,45 @@
-<div class="card m-3">
-    <div class="card-body">
-        <div class="student-info-header">
-            <img class="wolf-house-symbol" src="../../assets/images/timber-wolf.jpg">
-            <div>
-                <span class="student-info-header-name">{{ staffMember.name }}</span>
-                <div class="student-info-header-points">
-                    <span>{{ totalPoints }}</span><span>points</span>
-                </div>
-                <div class="student-info-header-points">
-                    <span>{{ totalSubmissions }}</span><span>submissions</span>
-                </div>
-            </div>
+<div class="staff-info-header">
+    <img class="wolf-house-symbol" src="../../assets/images/timber-wolf.jpg">
+    <span class="staff-info-header-name">{{ staffMember.name }}</span>
+    <div class="staff-info-header-details">
+        <div class="staff-info-header-details-flex-column">
+            <span>{{ totalPoints }}</span>
+            <span>points</span>
         </div>
-
-        <div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Points</th>
-                        <th>Paw</th>
-                        <th>Comments</th>
-                        <th>Staff Sign-Off</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let submission of pointsSubmissions">
-                        <td>{{ submission.date }} </td>
-                        <td>{{ submission.points }} </td>
-                        <td>{{ submission.paw }}</td>
-                        <td>{{ submission.comments }}</td>
-                        <td>{{ submission.staffSignOff }}</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="staff-info-header-details-flex-column">
+            <span>2</span>
+            <span>grade</span>
+        </div>
+        <div class="staff-info-header-details-flex-column">
+            <span>{{ totalSubmissions }}</span>
+            <span>submissions</span>
         </div>
     </div>
 </div>
+
+<table class="staff-card table">
+    <thead>
+        <tr>
+            <th>Date</th>
+            <th>Points</th>
+            <th>Paw</th>
+            <th>Comments</th>
+            <th>Staff Sign-Off</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let submission of pointsSubmissions">
+            <td>{{ submission.date }} </td>
+            <td>{{ submission.points }} </td>
+            <td>{{ submission.paw }}</td>
+            <td>{{ submission.comments }}</td>
+            <td>{{ submission.staffSignOff }}</td>
+            <td>
+                <i class="far fa-edit" ngbTooltip="Edit submission"></i>
+                <i class="far fa-trash-alt" ngbTooltip="Delete submission"></i>
+            </td>
+        </tr>
+    </tbody>
+</table>
+    
