--- a/src/app/student-points/student-points-details/student-points-details.component.html
+++ b/src/app/student-points/student-points-details/student-points-details.component.html
@@ -1,17 +1,17 @@
 <div class="student-info-header">
     <img class="wolf-house-symbol" src="../../assets/images/arctic-wolf.jpg">
-    <span class="student-info-header-name">{{ student.name }}</span>
+    <span class="student-info-header-name">{{ (student$ | async)?.name }}</span>
     <div class="student-info-header-details">
         <div class="student-info-header-details-flex-column">
             <span>{{ totalPoints }}</span>
             <span>points</span>
         </div>
         <div class="student-info-header-details-flex-column">
-            <span>5</span>
+            <span>{{ (student$ | async)?.grade }}</span>
             <span>grade</span>
         </div>
         <div class="student-info-header-details-flex-column">
-            <span>Tiffany</span>
+            <span>{{ (student$ | async)?.teacher }}</span>
             <span>teacher</span>
         </div>
     </div>
@@ -29,17 +29,19 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let submission of pointsSubmissions">
-            <td>{{ submission.date }} </td>
-            <td>{{ submission.points }} </td>
-            <td>{{ submission.paw }}</td>
-            <td>{{ submission.comments }}</td>
-            <td>{{ submission.staff }}</td>
-            <td>
-                <i class="far fa-edit" ngbTooltip="Edit submission"></i>
-                <i class="far fa-trash-alt" ngbTooltip="Delete submission"></i>
-            </td>
-        </tr>
+        <ng-container *ngIf="pointsSubmissions$ | async as pointsSubmissions">
+            <tr *ngFor="let submission of pointsSubmissions">
+                <td>{{ submission.date }} </td>
+                <td>{{ submission.points }} </td>
+                <td>{{ submission.paw }}</td>
+                <td>{{ submission.comments }}</td>
+                <td>{{ submission.staff }}</td>
+                <td>
+                    <i class="far fa-edit" ngbTooltip="Edit submission"></i>
+                    <i class="far fa-trash-alt" ngbTooltip="Delete submission"></i>
+                </td>
+            </tr>
+        </ng-container>
     </tbody>
 </table>
  
