--- a/src/app/points/points.component.html
+++ b/src/app/points/points.component.html
@@ -4,7 +4,7 @@
     <ng-select 
       [items]="students$ | async"
       bindLabel="name"
-      placeholder="Select a member"
+      placeholder="Select a student or staff member"
       labelForId="memberInput"
       formControlName="member">
     </ng-select>
@@ -61,6 +61,7 @@
   <button 
     [disabled]="pointsForm.status !== 'VALID'"
     type="submit" 
-    class="primary-button add-points-btn">
+    class="primary-button add-points-btn"
+    (click)="addPointSubmissions()">
     Add Points</button>
 </form>
