--- a/src/app/student-points/students-points-list/student-points-list.component.css
+++ b/src/app/student-points/students-points-list/student-points-list.component.css
@@ -4,6 +4,17 @@ h2 {
     margin-bottom: 1rem;
 }
 
+.filter-form {
+    display: grid;
+    grid-template-columns: auto 1fr auto 1fr auto 1fr;
+    grid-gap: 1rem;
+    margin: 2rem 0;
+}
+
+.filter-form label {
+    margin: auto 0.25rem;
+}
+
 .student-list {
     color: inherit !important;
 }
